--- a/login.html
+++ b/login.html
@@ -20,7 +20,7 @@
 
                         <form>
                                 <div class="textos">
-                                        <label for="email" id="ajuste">Email:</label>
+                                        <label for="email" class="ajuste">Email:</label>
                                         <input type="email" class="campos" id="email" required>
 
                                         <label for="senha" id="ajuste">Senha:</label>
